# smartass-image-api

./: .gitignore  Cargo.toml  Dockerfile  Readme.md  Rocket.toml  docker-compose.yaml  flake.nix
.git_/: FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git_/hooks/: applypatch-msg.sample  commit-msg.sample  fsmonitor-watchman.sample  post-update.sample  pre-applypatch.sample  pre-commit.sample  pre-merge-commit.sample  pre-push.sample  pre-rebase.sample  pre-receive.sample  prepare-commit-msg.sample  push-to-checkout.sample  sendemail-validate.sample  update.sample
.git_/logs/: HEAD
.git_/logs/refs/remotes/origin/: HEAD  main
.git_/objects/pack/: pack-afd2ef97b2d0040e94e278d7ecfdad6ab9a67e64.idx  pack-afd2ef97b2d0040e94e278d7ecfdad6ab9a67e64.rev
.git_/refs/remotes/origin/: main
.github/workflows/: main.yml
migrations/2024-03-19-145734_create_image_paths/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
